--- a/src/App.css
+++ b/src/App.css
@@ -223,6 +223,8 @@ main {
     box-shadow: 10px 10px 10px black;
   }
 
+  
+
   /*Стилі для новин адміна*/ 
 
   .news-item {
@@ -355,8 +357,8 @@ form input[type="file"] {
 
 form button {
   padding: 10px 20px;
-  background-color: blue;
-  color: white;
+  background-color: black;
+  color: yellow;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -366,7 +368,7 @@ form button {
 
 form button:hover {
   background-color: yellow;
-  color: blue;
+  color: black;
 }
 
 /*Стилі для стрічки новин*/
