--- a/src/styles/Subsections.css
+++ b/src/styles/Subsections.css
@@ -1,39 +1,42 @@
 .subsections-container {
-    display:block;
-    justify-content:center;
-    margin-bottom: 20px;
-  }
-  
-  .subsection-item {
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    cursor: pointer;
-  }
-  
-  .subsection-image {
-    width: 100px;
-    height: 100px;
-    transition: transform 0.3s ease;
-  }
-  
-  .subsection-item:hover .subsection-image {
-    transform: scale(1.1);
-  }
-  
-  .subsection-title {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 5px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  
-  .subsection-item:hover .subsection-title {
-    opacity: 1;
-  }
+  display: flex;
+  justify-content: center; /* Центрирует элементы по горизонтали */
+  flex-wrap: wrap; /* Позволяет элементам переноситься на новую строку при необходимости */
+  gap: 20px; /* Расстояние между элементами */
+  margin-bottom: 20px;
+}
+
+.subsection-item {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  cursor: pointer;
+}
+
+.subsection-image {
+  width: 100px;
+  height: 100px;
+  transition: transform 0.3s ease;
+}
+
+.subsection-item:hover .subsection-image {
+  transform: scale(1.1);
+}
+
+.subsection-title {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.subsection-item:hover .subsection-title {
+  opacity: 1;
+}
+
   
