--- a/src/App.css
+++ b/src/App.css
@@ -23,220 +23,20 @@
   flex: 1;
 }
 
-/* Main */
+/* Стиль для заголовків панелей */
+.panel {
+  padding: 10px;
+  margin-bottom: 50px;
+}
 
-main {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  padding: 20px;
-  margin-top: 20px;
-  }
-
-  .news-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: space-around; 
-    background-color:rgb(244, 209, 184);
-    border-radius: 8px;
-    overflow: hidden;
-    transition: transform 0.3s ease;
-    padding-bottom: 20px;
-  }
-  
-  .news-item:hover {
-    transform: translateY(-8px);
-  }
-  
-  .news-item img {
-    width: 200px;
-    height: 200px;
-    margin: 10px;
-    border-radius: 8px 8px 0 0;
-  }
-  
-  .news-item-content {
-    padding: 20px;
-  }
-  
-  .news-item h3 {
-    margin: 10px;
-    font-size: 40px;
-    color: black;
-
-  }
-  
-  .news-item p {
-    margin: 10px;
-    color: black;
-  }
-  
-  .news-item button {
-    display: inline-block;
-    padding: 8px 16px;
-    background-color: black;
-    color: yellow;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    
-  }
-  
-  .news-item button:hover {
-    background-color: yellow;
-    color: black;
-  }
-  
-
-.panel { 
-  padding: 20px;
-  margin-bottom: 100px;
-} 
-.panel h1{
-  font-size: 20px;
-  padding: 20px;
-  margin-bottom: 30px;
+.panel h1 {
+  font-size: 18px;
+  padding: 10px;
+  margin-bottom: 20px;
   text-align: center;
   background-color: black;
   color: yellow;
   border-radius: 10px;
-  box-shadow: 10px 10px 10px black;
-}
-.search-results{
-  padding: 20px;
-  margin-bottom: 100px;
-}
-.search-results h1{
-  font-size: 20px;
-  padding: 20px;
-  margin-bottom: 30px;
-  text-align: center;
-  background-color: black;
-  color: yellow;
-  border-radius: 10px;
-  box-shadow: 10px 10px 10px black;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Додано тінь */
 }
 
-.news-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-}
-
-.news-item {
-  display: flex;
-  flex-direction: row;
-  background-color:whitesmoke;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  transition: transform 0.3s ease;
-}
-
-.news-item:hover {
-  transform: translateY(-5px);
-}
-
-.news-item img {
-  width: 270px; 
-  height: auto; 
-  margin-right: 10px; 
-  border-radius: 5px;
-}
-
-.news-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.news-details {
-  padding: 15px;
-}
-
-.news-details a {
-  text-decoration: none; 
-}
-
-.news-category { 
-  font-size: 14px;
-  color: yellow;
-  background-color: black;
-  text-transform: uppercase;
-  margin-bottom: 5px;
-}
-.news-section{
-  font-size: 14px;
-  color: black;
-  background-color: yellow;
-  text-transform: uppercase;
-  margin-bottom: 5px;
-}
-.news-date {
-  font-size: 12px;
-  color: black;
-  margin-left: 20px;
-  margin-bottom: 10px;
-}
-
-.news-title {
-  font-size: 20px; /* Увеличивает размер шрифта */
-  font-weight: bold; /* Жирное начертание шрифта */
-  color: #333; /* Темно-серый цвет для лучшего контраста */
-  margin: 0; /* Убирает отступы */
-  transition: color 0.3s ease, transform 0.3s ease; /* Добавляет плавный переход для цвета и трансформации */
-  line-height: 1.4; /* Увеличивает межстрочный интервал */
-}
-
-.news-title:hover {
-  font-style: italic;
-  transform: translateY(-3px); /* Поднимает заголовок при наведении для эффекта */
-  border-radius: 5px;
-}
-   
-  /* Стилі для пагінації сторінок */
-
-  .pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    bottom: 60px; 
-    background-color: black;
-    padding: 10px 0; 
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 1000; 
-  }
-  
-  .pagination button {
-    padding: 10px 20px;
-    margin: 0 5px;
-    background-color: white;
-    color: black;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .pagination button:hover {
-    background-color: yellow;
-    color: black;
-  }
-  
-  .pagination span {
-    color: yellow;
-    font-size: 20px;
-    margin: 0 10px;
-  }
-  
-  
-  
-  
-
- 
-
-
-  
-  
