--- a/src/styles/NewsDetails.css
+++ b/src/styles/NewsDetails.css
@@ -51,3 +51,51 @@
   font-size: 1rem;
   color: #333; /* Цвет текста для лучшей читаемости */
 }
+/* Мобільні пристрої */
+@media (max-width: 600px) {
+  .news_details {
+    padding: 10px;
+  }
+
+  .news_details h2 {
+    font-size: 28px; /* Зменшення розміру заголовка для мобільних */
+  }
+
+  .news_details p {
+    font-size: 0.9rem; /* Зменшення розміру тексту для мобільних */
+  }
+
+  .news_details img {
+    max-width: 100%; /* Збільшення ширини зображення для мобільних */
+  }
+}
+
+/* Планшети */
+@media (min-width: 601px) and (max-width: 1024px) {
+  .news_details {
+    padding: 15px;
+  }
+
+  .news_details h2 {
+    font-size: 32px; /* Зменшення розміру заголовка для планшетів */
+  }
+
+  .news_details p {
+    font-size: 0.95rem; /* Зменшення розміру тексту для планшетів */
+  }
+}
+
+/* Десктопи */
+@media (min-width: 1025px) {
+  .news_details {
+    padding: 20px; /* Стандартне відступлення для десктопів */
+  }
+
+  .news_details h2 {
+    font-size: 40px; /* Стандартний розмір заголовка для десктопів */
+  }
+
+  .news_details p {
+    font-size: 1rem; /* Стандартний розмір тексту для десктопів */
+  }
+}
