BigSports version 3.0.0 Доопрацювання 2

--- a/src/styles/AdminPanel.css
+++ b/src/styles/AdminPanel.css
@@ -13,3 +13,45 @@
     border-radius: 10px;
     box-shadow: 10px 10px 10px black;
   }
+
+  /* Середній екран (планшети в горизонтальній орієнтації) */
+@media (min-width: 768px) and (max-width: 1199px) {
+  .admin_panel {
+    margin-bottom: 80px;
+    box-shadow: 8px 8px 12px black;
+  }
+  .admin_panel h2 {
+    font-size: 22px;
+    padding: 20px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+  }
+}
+
+/* Малий екран (планшети в портретній орієнтації та великі мобільні телефони) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .admin_panel {
+    margin-bottom: 60px;
+    box-shadow: 6px 6px 8px black;
+  }
+  .admin_panel h2 {
+    font-size: 20px;
+    padding: 15px;
+    margin-bottom: 25px;
+    border-radius: 8px;
+  }
+}
+
+/* Дуже малий екран (мобільні телефони) */
+@media (max-width: 575px) {
+  .admin_panel {
+    margin-bottom: 50px;
+    box-shadow: 4px 4px 6px black;
+  }
+  .admin_panel h2 {
+    font-size: 18px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 6px;
+  }
+}
