--- a/src/styles/Subsections.css
+++ b/src/styles/Subsections.css
@@ -14,11 +14,19 @@
 }
 
 .subsection-image {
-  width: 70px;
-  height: 70px;
+  width: 80px;
+  height: 80px;
   transition: transform 0.3s ease;
   object-fit: contain;
 }
+
+.club-logo-small {
+  width: 60px;
+  height: 60px;
+  transition: transform 0.3s ease;
+  object-fit: contain;
+}
+
 
 .subsection-item:hover .subsection-image {
   transform: scale(1.1);
