--- a/src/styles/NewsDetails.css
+++ b/src/styles/NewsDetails.css
@@ -42,11 +42,12 @@
 }
 
 .single-news-article-image {
-  max-width: 90%;
-  height: auto;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: 1000px;
+  height: 340px; /* або 300px — як хочеш */
+  object-fit: contain;
 }
+
 /* Контейнер для статті */
 .single-news-content-wrapper {
   width: 100%;
@@ -125,7 +126,7 @@
   }
 
   .single-news-article-image {
-    max-width: 100%;
+    height: 180px;
   }
 
   .single-news-content iframe {
