--- a/src/styles/EditNewsForm.css
+++ b/src/styles/EditNewsForm.css
@@ -24,7 +24,8 @@
   }
   
   .edit-news-table .ql-container {
-    height: 150px;
+    height: 350px; /* або навіть 400px+ якщо хочеш більше */
+    min-height: 350px;
   }
   
   
