--- a/src/styles/NewsDetails.css
+++ b/src/styles/NewsDetails.css
@@ -94,12 +94,14 @@
 }
 /*стилі для фото та відео*/
 .single-news-content img {
-  max-width: 100%;
-  height: auto;
+  max-width: 500px; /* Зменшений розмір по ширині */
+  height: auto;      /* Автоматично зберігає пропорції */
   display: block;
   margin: 20px auto;
   border-radius: 8px;
 }
+
+
 .single-news-content iframe {
   width: 100%;
   height: 400px;
