BigSport version 4.2 - Підключенна аналітики Amplitude 4

--- a/src/styles/NewsDetails.css
+++ b/src/styles/NewsDetails.css
@@ -146,6 +146,9 @@
   .single-news-content iframe {
     height: 250px;
   }
+  .single-news-content img {
+    max-width: 100% !important; /* ✅ адаптивне зображення */
+  }
 }
 
 /* 📱 Планшети */
