--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,13 @@
   min-height: 100vh;
 }
 .container {
-  max-width: 1400px;
+  width: 100%;
+  max-width: 1440px;
   margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
+
 
 /*----Кнопки----*/
 /*кнопка виходу*/
