--- a/src/styles/GeneralNewsList.css
+++ b/src/styles/GeneralNewsList.css
@@ -14,16 +14,14 @@
     align-items: center;
     background: white;
     border-radius: 12px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     padding: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+
     transition: box-shadow 0.3s ease, transform 0.3s ease;
   }
   
-  .news-card-general:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  }
+ 
   
   /* Зображення новини */
   .news-image-general {
