--- a/src/styles/NewsList.css
+++ b/src/styles/NewsList.css
@@ -16,15 +16,10 @@
   align-items: center;
   background: white;
   border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   overflow: hidden;
   padding: 8px;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
-}
-
-.news-card:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
 /* Зображення новини */
