--- a/src/styles/SubsectionNewsList.css
+++ b/src/styles/SubsectionNewsList.css
@@ -16,16 +16,14 @@
   align-items: center;
   background: white;
   border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+
   overflow: hidden;
   padding: 10px;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
-.subsection-news-card:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-}
+
 
 /* Зображення новини */
 .subsection-news-image {
