--- a/src/styles/NewsDetails.css
+++ b/src/styles/NewsDetails.css
@@ -120,7 +120,6 @@
 }
 
 /* 📱 Мобільні пристрої */
-/* 📱 Мобільні пристрої */
 @media (max-width: 768px) {
   .single-news-container { padding: 12px; }
 
@@ -138,11 +137,16 @@
     line-height: 1.25;
   }
 
+  .single-news-title {
+  font-size: 38px;
+}
+
+
   /* Текст статті */
   .single-news-content {
     /* або фіксоване: 17px; */
     font-size: clamp(15px, 4.5vw, 18px);
-    line-height: 1.2;
+    line-height: 1.5;
   }
 
   /* Текстові елементи всередині HTML-контенту */
@@ -182,6 +186,12 @@
     width: 100%;
     height: 220px;        /* змінюйте при потребі */
   }
+
+  .single-news-content p { 
+  margin: 0 0 6px; 
+  line-height: 1.2; /* трішки менше міжрядковий інтервал */
+}
+
 }
 
 
