--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -49,7 +49,7 @@
 }
 
 .search-button {
-  background-color: #ffcc00;
+  background-color: white;
   border: none;
   padding: 8px;
   border-radius: 50%;
