--- a/src/styles/NewsDetails.css
+++ b/src/styles/NewsDetails.css
@@ -89,8 +89,9 @@
 .single-news-meta {
   margin-top: 30px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column; /* 👈 ставимо колонку */
+  align-items: flex-start; /* вирівнювання зліва */
+  gap: 6px; /* відстань між елементами */
 }
 
 .single-news-meta span {
@@ -138,7 +139,7 @@
   }
 
   .single-news-title {
-  font-size: 38px;
+  font-size: 28px;
 }
 
 
@@ -146,7 +147,7 @@
   .single-news-content {
     /* або фіксоване: 17px; */
     font-size: clamp(15px, 4.5vw, 18px);
-    line-height: 1.5;
+    line-height: 1.3;
   }
 
   /* Текстові елементи всередині HTML-контенту */
